<resources>
    <string name="app_name">Echo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="translation">Translation</string>
    <string name="word_phrase">Word/Phrase</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="submit">Submit</string>
    <string name="insert_video_here">Insert Video Here</string>
    <string name="record_audio">Record Audio</string>
</resources>