<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0DA18"
    android:textAlignment="center"
    android:textDirection="firstStrongRtl"
    tools:context="com.example.echo.fragments.ComposeFragment">


    <EditText
        android:id="@+id/etLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/et_style"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/language"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toTopOf="@+id/etWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/et_style"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/word_phrase"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toTopOf="@+id/etTranslation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLanguage"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etTranslation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/et_style"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/translation"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toTopOf="@+id/etDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWord" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/et_style"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toTopOf="@+id/etCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTranslation" />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/et_style"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/category"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toTopOf="@+id/btnCaptureAudio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <Button
        android:id="@+id/btnCaptureAudio"
        android:layout_width="101dp"
        android:layout_height="83dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_circle_style"
        android:backgroundTint="#FFD437"
        android:foregroundTint="#FFD437"
        android:insetLeft="9dp"
        android:shadowColor="@color/black"
        app:icon="@android:drawable/ic_media_play"
        app:iconSize="60dp"
        app:iconTint="@color/white"
        app:iconTintMode="src_atop"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCategory"
        app:strokeColor="@color/white" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="#FFD437"
        android:backgroundTintMode="add"
        android:foregroundTint="#FFD437"
        android:shadowColor="@color/black"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/evView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCaptureAudio"
        app:strokeColor="#FFD437" />

    <VideoView
        android:id="@+id/evView"
        android:layout_width="357dp"
        android:layout_height="110dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:text="@string/insert_video_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />


</androidx.constraintlayout.widget.ConstraintLayout>