<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/yellowbackground"
        android:layout_width="match_parent"
        android:layout_height="292dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/yellowbg"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/whitebg"
        android:layout_width="288dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="57dp"
        app:srcCompat="@drawable/round_rect_shape"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/whitebg2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="57dp"
        app:srcCompat="@drawable/round_rect_shape"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="288dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="57dp"
        app:srcCompat="@drawable/round_rect_shape"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnStartAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="21dp"
        android:text="Play Audio"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="342dp" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="32dp"
        android:text="Username"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="270dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="69dp" />

    <EditText
        android:id="@+id/tvTimeCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="175dp"
        android:height="12dp"
        android:background="@null"
        android:text="1:00/2:04"
        android:textColor="#858585"
        android:textSize="11sp" />


    <TextView
        android:id="@+id/etLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:text="@string/language"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/whitebg"
        android:layout_alignTop="@+id/whitebg"
        android:layout_alignEnd="@+id/whitebg"
        android:layout_alignBottom="@+id/whitebg"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="12dp"
        android:text="@string/category"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etWord"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whitebg"
        android:layout_alignStart="@+id/whitebg2"
        android:layout_alignEnd="@+id/whitebg2"
        android:layout_alignBottom="@+id/whitebg2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="12dp"
        android:text="@string/word_phrase"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView10"
        android:layout_alignTop="@+id/imageView10"
        android:layout_alignEnd="@+id/imageView10"
        android:layout_alignBottom="@+id/imageView10"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="12dp"
        android:text="@string/translation"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>
=======
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/ufi_save" />

</LinearLayout>

